--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -2,6 +2,15 @@
 - name: Ensure Docker is installed
   import_tasks: tasks/rpminfo.yml
 
+- name: Adding user {{ user }} to docker group
+  user:
+    name: "{{ user }}"
+    groups: docker
+    append: yes
+  loop: "{{ docker_users_list }}"
+  loop_control:
+    loop_var: user
+
 - name: Set up service configuration
   copy:
     src: files/docker.conf
