--- a/tasks/kdump.yml
+++ b/tasks/kdump.yml
@@ -1,5 +1,6 @@
-- name: Check kdump configuration
-  template: src=templates/kdump.j2 dest=/etc/kdump.conf mode=644
+- name: "Check kdump configuration"
+  template:
+    src: templates/kdump.j2
+    dest: /etc/kdump.conf
+    mode: 644
   when: kdump is defined
-
-
