--- a/tasks/maven.yml
+++ b/tasks/maven.yml
@@ -23,6 +23,11 @@
     mode: 0755
   loop: "{{ harmonia_target_files }}"
 
+- name: "check if {{ jboss_set_shared_maven_repo.path }} exists"
+  stat:
+    path: "{{ jboss_set_shared_maven_repo.path }}"
+  register: jboss_set_shared_folder_state
+
 - name: "Set up shared directory for jboss-set maven repo: {{ jboss_set_shared_maven_repo.path }}"
   block:
     - file:
@@ -37,4 +42,4 @@
 
     - name: "Set propers ACL for {{ jboss_set_shared_maven_repo.path }}"
       command: "chmod 2775 -R jboss-set {{ jboss_set_shared_maven_repo.path }}"
-  creates: "{{ jboss_set_shared_maven_repo.path }}"
+  when: "{{ jboss_set_shared_folder_state.stat.exists == false  }}"
