--- a/roles/zeus_cronjobs/defaults/main.yml
+++ b/roles/zeus_cronjobs/defaults/main.yml
@@ -2,4 +2,4 @@
 # defaults file for zeus_cronjobs
 logs_cleaning:
   -  { name: 'cleaning-eap-server-logs',  root_folder: '/opt/rh/eap7/root/usr/share/wildfly/standalone/log', nb_days_oldest: 31, filename_pattern: 'server*.log.20*'}
-
+date_format: '+%Y/%m/%d-%H:%M'
