--- a/roles/zeus_cronjobs/defaults/main.yml
+++ b/roles/zeus_cronjobs/defaults/main.yml
@@ -3,3 +3,11 @@
 logs_cleaning:
   -  { name: 'cleaning-eap-server-logs',  root_folder: '/opt/rh/eap7/root/usr/share/wildfly/standalone/log', nb_days_oldest: 31, filename_pattern: 'server*.log.20*'}
 date_format: '+%Y/%m/%d-%H:%M'
+cronjobs:
+  - { name: "Ansible Daily Report", template: templates/cron-ansible.j2, dest: /root/cron-ansible, frequency: weekly, job: /root/cron-monit  }
+  - { name: "Monit Weekly Report", template: templates/cron-monit.j2, dest: /root/cron-monit, frequency: daily, job: /root/cron-cleaning-logs }
+  - { name: "Ansible Daily Report", template: templates/cron-cleaning-logs.j2, dest: /root/cron-cleaning-logs, frequency: daily, job: /root/cron-ansible } 
+fixed_time_cronjobs:
+- { name: "Delete all stopped containers", minute: 0, hour: 10, weekday: 2, job: "/root/cron-cleaning-docker-stopped-containers >> /var/log/docker.deleted.containers.log", template: templates/cron-cleaning-docker-stopped-containers.j2, dest: /root/cron-cleaning-docker-stopped-containers }
+- { name: "Delete all forgotten ws-cleanup directories", minute: 0, hour: 10, weekday: 0, job: "/root/cron-cleaning-ws-cleanup-directories.sh >> /var/log/ws-cleanup.log", template: templates/cron-cleaning-ws-cleanup-directories.j2, dest: /root/cron-cleaning-ws-cleanup-directories }
+
