--- a/roles/zeus_cronjobs/tasks/main.yml
+++ b/roles/zeus_cronjobs/tasks/main.yml
@@ -6,22 +6,15 @@
     mode: 755
     owner: root
     group: root
-  loop:
-    - { name: "Ansible Daily Report", template: templates/cron-ansible.j2, dest: /root/cron-ansible }
-    - { name: "Monit Weekly Report", template: templates/cron-monit.j2, dest: /root/cron-monit }
-    - { name: "Ansible Daily Report", template: templates/cron-cleaning-logs.j2, dest: /root/cron-cleaning-logs } 
-#    - { template: templates/cron-cleaning-docker-stopped-containers.j2, dest: /root/cron-cleaning-docker-stopped-containers }
-#    - { template: templates/cron-cleaning-ws-cleanup-directories.j2, dest: /root/cron-cleaning-ws-cleanup-directories }
+  loop: "{{ cronjobs }}"
 
 - name: "Set up cronjob for {{ item.name }} ({{ item.frequency }})"
   cron:
     name: "{{ item.name }}"
     special_time: "{{ item.frequency }}"
     job: "{{ item.job }}"
-  loop:
-    - { name: "Monit Weekly Report", frequency: weekly, job: /root/cron-monit }
-    - { name: "Cleaning logfiles", frequency: daily, job: /root/cron-cleaning-logs }
-    - { name: "Ansible Daily Report", frequency: daily, job: /root/cron-ansible }
+  loop: "{{ cronjobs }}"
+  when: item.frequency is defined
 
 - name: "Deploy job: {{ item.name }}"
   cron:
@@ -30,7 +23,5 @@
     hour: "{{ item.hour }}"
     weekday: "{{ item.weekday }}"
     job: "{{ item.job }}"
-  loop:
-    - { name: "Delete all stopped containers", minute: 0, hour: 10, weekday: 2, job: "/root/cron-cleaning-docker-stopped-containers >> /var/log/docker.deleted.containers.log" }
-    - { name: "Delete all forgotten ws-cleanup directories", minute: 0, hour: 10, weekday: 0, job: "/root/cron-cleaning-ws-cleanup-directories.sh >> /var/log/ws-cleanup.log" }
+  loop: "{{ fixed_time_cronjobs }}"
 
